@@ -39,13 +39,11 @@ Technical requirements
 
 Below is the list of currently supported combinations of Wagtail, Django and Python:
 
-+------------+------------+------------+--------------------+
-| #          | Wagtail    | Django     | Python             |
-+============+============+============+====================+
-| 1          | 1.9        | 1.8        | 2.7, 3.3, 3.4, 3.5 |
-+------------+------------+------------+--------------------+
-| 2          | 1.9        | 1.9, 1.10  | 2.7, 3.4, 3.5      |
-+------------+------------+------------+--------------------+
++---+---------+-----------+---------------+
+| # | Wagtail | Django    | Python        |
++===+=========+===========+===============+
+| 1 | 1.10    | 1.8, 1.10 | 2.7, 3.4, 3.5 |
++---+---------+-----------+---------------+
 
 Code and contribution
 ---------------------
