@@ -2,7 +2,7 @@
 skipsdist = True
 usedevelop = True
 
-envlist = py{27,33,34,35}-dj{18}-wt{19}, py{27,34,35}-dj{19,110}-wt{19}, flake8
+envlist = py{27,34,35}-dj{18,110}-wt{110}, flake8
 
 [flake8]
 exclude = texsite/*/migrations/*
@@ -15,16 +15,14 @@ commands = coverage run runtests.py
 
 basepython =
     py27: python2.7
-    py33: python3.3
     py34: python3.4
     py35: python3.5
 
 deps =
     dj18: Django>=1.8.1,<1.9
-    dj19: Django>=1.9,<1.10
     dj110: Django>=1.10,<1.11
 
-    wt19: wagtail>=1.9,<1.10
+    wt110: wagtail>=1.10,<1.11
 
 [testenv:flake8]
 commands = flake8 texsite
